--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="image image1" style="flex-grow: 1;"></div>
       <div class="text">
         <h2>About</h2>
-        <p><b>Winter's Discord</b>&nbsp;is a community made discord filled with several fun and engaging bots, enjoyable content, and ultimately to bridge the gap between the writer and reader for an entertaining and. If you are interested in any of Winter's web novels, or wish to be featured with your own. This discord is the place to share your ideas!<br/><br/><b>The discord has several features such as:</b><br/></p>
+        <p><b>Winter's Discord</b>&nbsp;is a community made discord filled with several fun and engaging bots, enjoyable content, and ultimately to bridge the gap between the writer and reader for an entertaining and exciting experience. If you are interested in any of Winter's web novels, or wish to be featured with your own. This discord is the place to share your ideas!<br/><br/><b>The discord has several features such as:</b><br/></p>
         <ul>
           <li>Patreon Integration</li>
           <li>Unique and Fun Roles</li>
