--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   <div class="header d-flex flex-column justify-content-between align-items-center">
     <nav class="topmenu d-flex justify-content-center"><a href="#about">About</a>
       <div class="line align-self-center"></div><a href="#rules">Rules</a>
-      <div class="line align-self-center"></div><a href="https://discord.gg/pRFQqPe">Join</a>
+      <div class="line align-self-center"></div><a href="https://discord.gg/EemxwrE">Join</a>
     </nav>
     <div class="server-info d-flex align-items-center flex-column text-center">
-      <h1>Winter's Official Discord</h1><a class="links-suppressor join-btn btn-pill white" href="https://discord.gg/pRFQqPe">Join Server</a>
+      <h1>Winter's Official Discord</h1><a class="links-suppressor join-btn btn-pill white" href="https://discord.gg/EemxwrE">Join Server</a>
     </div>
   </div>
   <div class="inner d-flex flex-column">
@@ -65,7 +65,7 @@
       </div>
     </section>
     <section class="join d-flex justify-content-center">
-      <div class="line align-self-center" style="flex-grow: 1;"></div><a class="links-suppressor btn-pill white" href="https://discordapp.com/invite/pRFQqPe">Join Server</a>
+      <div class="line align-self-center" style="flex-grow: 1;"></div><a class="links-suppressor btn-pill white" href="https://discordapp.com/invite/EemxwrE">Join Server</a>
       <div class="line align-self-center" style="flex-grow: 1;"></div>
     </section>
   </div>
